--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="a11y_movie_rate">Movie rating: <xliff:g id="rate">%1$s</xliff:g></string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="trailer">Trailer</string>
+    <string name="no_movie_selected">No movie selected</string>
 </resources>
