--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="no_internet_connection">No internet connection</string>
     <string name="trailer">Trailer</string>
     <string name="no_movie_selected">No movie selected</string>
+    <string name="added_to_favorite">Added to favorite</string>
+    <string name="removed_from_favorite">Removed from favorite</string>
+    <string name="reviews">Reviews</string>
+    <string name="no_reviews">No reviews</string>
+    <string name="no_trailers">No trailers</string>
+    <string name="share">Share</string>
+    <string name="movie_title" />
+    <string name="show_favorites">Show favorites</string>
 </resources>
