Fixed view for a tablet portrait view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="share">Share</string>
     <string name="movie_title" />
     <string name="show_favorites">Show favorites</string>
+    <string name="movie_detail_add_favorite">Add to favorite</string>
 </resources>
